--- a/.gitignore
+++ b/.gitignore
@@ -29,14 +29,17 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
+# Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directories
 node_modules/
 jspm_packages/
 
-# TypeScript v1 declaration files
+# Distribution directories
+dist/
+
+# Typescript v1 declaration files
 typings/
 
 # Optional npm cache directory
@@ -53,9 +56,9 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
+yarn.lock
 
 # dotenv environment variables file
 .env
 
-# next.js build output
-.next
+.idea
