--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
-    "prop-types": "latest"
+    "prop-types": "latest",
+    "styled-components": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
