--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "latest",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-redux": "^7.0.2",
     "react-scripts": "2.1.8",
-    "prop-types": "latest",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
     "styled-components": "latest"
   },
   "scripts": {
